Issue #SB-584 fix: activity tile is left aligned and removed text from html

--- a/src/app.scss
+++ b/src/app.scss
@@ -1415,3 +1415,9 @@ ion-modal.sb-progress-loader {
     padding-top: 16px;
   }
 }
+.select-activity-popover {
+  .sb-popover-title {
+    text-align: left !important;
+    margin-left: 1.5rem;
+  }
+}
